# Wolf3d-

./: CMakeLists.txt  Makefile  README.md  author  wolf3d
includes/: wolf3d.h
levels/: 1.wolf3d
libft/: Makefile  author
libft/includes/: libft.h
libft/src/: ft_atoi.c  ft_bzero.c  ft_delarr.c  ft_gnl.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_powd.c  ft_powf.c  ft_powi.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+23 more)
sources/: animation_system.c  animations.c  choose_obsticle.c  color.c  door.c  draw.c  draw_weapons.c  errors.c  hud_system.c  hud_ui.c  init.c  init_animations.c  init_rays.c  keyboard.c  load_files.c  load_walls.c  loading.c  main.c  map.c  map_init.c  map_type.c  map_validation.c  mouse.c  movement.c  objects.c  objects_draw.c  player.c  raycasting.c  render.c  utils.c  weapons.c
